<resources>
    <string name="app_name">DailyJournal</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_training">Training</string>
    <string name="title_diary">Diary</string>
    <string name="title_eating">Eating</string>
    <string name="strength_training_label">Strength Training</string>
    <string name="strength_training_type_light">LIGHT</string>
    <string name="strength_training_type_moderate">MODERATE</string>
    <string name="strength_training_type_heavy">HEAVY</string>
    <string name="cardio_training_label">Cardio Training</string>
    <string name="steps_label">Daily Steps</string>
    <string name="button_save_text">save</string>
    <string name="cardio_training_type_light">LIGHT</string>
    <string name="cardio_training_type_moderate">MODERATE</string>
    <string name="cardio_training_type_vigorous">VIGOROUS</string>
    <string name="steps_not_completed">NOT COMPLETED</string>
    <string name="steps_completed">COMPLETED</string>
    <string name="description_back_button">Back button</string>
    <string name="description_steps_image">Steps Image Description</string>
    <string name="description_cardio_training_image">Cardio Training Image</string>
    <string name="description_strength_training_image">Strength Training Image</string>
    <string name="sample_date_text">24 Aug 2022</string>
    <string name="empty_field" />
    <string name="eating_label">Eating</string>
    <string name="healthy_eating_label">Healthy Eating</string>
    <string name="eating_type_bad">BAD</string>
    <string name="eating_type_average">AVERAGE</string>
    <string name="eating_type_great">GREAT</string>
    <string name="empty_string" />
    <string name="content_description">contentDescription</string>
    <string name="main_menu_training">Training</string>
    <string name="main_menu_diary">Diary</string>
    <string name="main_menu_eating">Eating</string>
    <string name="edit">edit</string>
</resources>