<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dst.dailyjournal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_training"
            app:destination="@id/navigation_training"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_diary"
            app:destination="@id/navigation_diary" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.dst.dailyjournal.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dst.dailyjournal.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_training"
        android:name="com.dst.dailyjournal.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />
    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.dst.dailyjournal.ui.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_diary" />
</navigation>