<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/master_padding"
    tools:context=".ui.training.TrainingFragment"
    android:background="#353535">

    <TextView
        android:id="@+id/tvTrainingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_training"
        android:textColor="@color/button_clicked_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTrainingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_date_text"
        android:textColor="@color/button_clicked_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTrainingLabel" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:alpha="1"
        android:background="#03A9F4"
        app:layout_constraintTop_toBottomOf="@+id/tvTrainingLabel" />

    <ImageView
        android:id="@+id/ivStrengthImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/master_margin_top"
        android:contentDescription="@string/description_strength_training_image"
        android:src="@drawable/strength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <View
        android:id="@+id/strengthHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="1"
        android:background="@color/button_clicked_color"
        app:layout_constraintBottom_toBottomOf="@id/ivStrengthImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivStrengthImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/strength_training_label"
        android:textColor="@color/button_clicked_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/strengthHorizontalLine"
        app:layout_constraintStart_toEndOf="@id/ivStrengthImage" />

    <LinearLayout
        android:id="@+id/layoutStrengthTraining"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/strengthHorizontalLine">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStrengthLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/strength_training_type_light"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStrengthModerate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/strength_training_type_moderate"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:rippleColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStrengthHeavy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/strength_training_type_heavy"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:rippleColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCardioImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/master_margin_top"
        android:contentDescription="@string/description_cardio_training_image"
        android:src="@drawable/cardio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutStrengthTraining" />

    <View
        android:id="@+id/cardioHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="1"
        android:background="@color/button_clicked_color"
        app:layout_constraintBottom_toBottomOf="@id/ivCardioImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCardioImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cardio_training_label"
        android:textColor="@color/button_clicked_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cardioHorizontalLine"
        app:layout_constraintStart_toEndOf="@id/ivCardioImage" />

    <LinearLayout
        android:id="@+id/layoutCardioTraining"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardioHorizontalLine">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCardioLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/cardio_training_type_light"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCardioModerate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/cardio_training_type_moderate"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCardioVigorous"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/cardio_training_type_vigorous"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/white" />
    </LinearLayout>


    <ImageView
        android:id="@+id/ivStepsImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/master_margin_top"
        android:contentDescription="@string/description_steps_image"
        android:src="@drawable/steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCardioTraining" />

    <View
        android:id="@+id/stepsHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="1"
        android:background="@color/button_clicked_color"
        app:layout_constraintBottom_toBottomOf="@id/ivStepsImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivStepsImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/steps_label"
        android:textColor="@color/button_clicked_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/stepsHorizontalLine"
        app:layout_constraintStart_toEndOf="@id/ivStepsImage" />

    <EditText
        android:id="@+id/etSteps"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="0"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/button_clicked_color"
        android:textColorHint="@color/button_clicked_color"
        android:backgroundTint="@color/button_clicked_color"
        app:layout_constraintBottom_toTopOf="@id/stepsHorizontalLine"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSteps"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stepsHorizontalLine">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStepsNotDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/steps_not_done"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStepsDone"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_default_color"
            android:padding="0dp"
            android:text="@string/steps_done"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/description_back_button"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSave" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:text="@string/button_save_text"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>