<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnTraining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:elevation="2dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/training_menu_button"
        app:layout_constraintBottom_toTopOf="@id/btnDiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed"
        app:shapeAppearanceOverlay="@style/topCorersSize" />

    <ImageView
        android:id="@+id/trainingIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        android:elevation="3dp"
        android:src="@drawable/strength"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@id/btnTraining"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btnTraining"
        app:layout_constraintTop_toBottomOf="@+id/btnTraining"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/main_menu_training"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTraining"
        app:layout_constraintEnd_toEndOf="@id/btnTraining"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btnTraining"
        app:layout_constraintTop_toBottomOf="@+id/trainingIcon" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnDiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:elevation="2dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/diary_menu_button"
        app:layout_constraintBottom_toTopOf="@id/btnEating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTraining"
        app:shapeAppearanceOverlay="@style/middleCorersSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:focusable="false"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/main_menu_diary"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEating"
        app:layout_constraintEnd_toEndOf="@id/btnDiary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btnDiary"
        app:layout_constraintTop_toBottomOf="@+id/diaryIcon" />

    <ImageView
        android:id="@+id/diaryIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        android:elevation="3dp"
        android:src="@drawable/book"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@id/btnDiary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btnDiary"
        app:layout_constraintTop_toBottomOf="@+id/btnTraining"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnEating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:elevation="2dp"
        android:focusable="false"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/eating_menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDiary"
        app:layout_constraintVertical_bias="0"
        app:shapeAppearanceOverlay="@style/bottomCorersSize" />

    <ImageView
        android:id="@+id/eatingIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        android:elevation="3dp"
        android:src="@drawable/eating"
        app:layout_constraintBottom_toTopOf="@id/some"
        app:layout_constraintEnd_toEndOf="@id/btnEating"
        app:layout_constraintStart_toStartOf="@id/btnEating"
        app:layout_constraintTop_toBottomOf="@id/btnDiary"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/some"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:focusable="false"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/main_menu_eating"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnEating"
        app:layout_constraintEnd_toEndOf="@id/btnEating"
        app:layout_constraintStart_toStartOf="@id/btnEating"
        app:layout_constraintTop_toBottomOf="@id/eatingIcon" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/sample_date_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>